syntax = "proto3";

package mempoolpb;

option go_package = "github.com/filecoin-project/mir/pkg/pb/mempoolpb";

import "contextstorepb/contextstorepb.proto";
import "dslpb/dslpb.proto";
import "mir/plugin.proto";

// ============================================================
// Messages
// ============================================================

message Event {
  oneof Type {
    option (mir.event_type) = true;
    NewTransactions      new_transactions      = 1;
    RequestTransactions  request_transactions  = 2;
    TransactionsResponse transactions_response = 3;
  }
}

message NewTransactions {
  repeated bytes tx_ids = 1;
}

message RequestTransactions {
  repeated bytes            tx_ids = 1;
  RequestTransactionsOrigin origin = 2;
}

message TransactionsResponse {
  repeated bytes            txs    = 1;
  RequestTransactionsOrigin origin = 2;
}

// TODO: add events related to garbage collection.

message RequestTransactionsOrigin {
  string module = 1;
  oneof Type {
    contextstorepb.Origin context_store = 2;
    dslpb.Origin          dsl           = 3;
  }
}
